# yadiskQt

./: README.md
YaDisk/: CheckAndSync.cpp  CheckAndSync.h  ClientRequests.cpp  ClientRequests.h  Connections.cpp  HTTP_connect.cpp.autosave  TrayIcon.cpp  TrayIcon.h  TrayMenu.cpp  TrayMenu.h  TrayMenu.ui  YaDisk.pro  main.cpp  mainwindow.h  mainwindow.ui
YaDisk/qwebdav/: qwebdav.cpp
build-YaDisk-Desktop-Debug/: Makefile  YaDisk  libqwebdav.so.1.0  moc_CheckAndSync.cpp  moc_ClientRequests.cpp  moc_HTTP_connect.cpp  moc_TrayIcon.cpp  moc_mainwindow.cpp  ui_TrayMenu.h  ui_mainwindow.h
build-YaDisk-Desktop-Debug/qwebdav/: libqwebdav.so.1.0.0
qwebdav-HEAD-41b99aa/: CMakeLists.txt  INSTALL  QWebdav.pc.in
qwebdav-HEAD-41b99aa/cmake/modules/: CMakeLists.txt  FindQWebdav.cmake
qwebdav-HEAD-41b99aa/examples/: CMakeLists.txt
qwebdav-HEAD-41b99aa/examples/explorer/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  propertiesdialog.cpp  propertiesdialog.h  propertiesdialog.ui
qwebdav-HEAD-41b99aa/src/: CMakeLists.txt  QWebdav  QWebdavUrlInfo  webdav.cpp  webdav.h  webdav_url_info.cpp  webdav_url_info.h
